# updated-cyberchat

./: .replit  app.py  auth.py  config.py  main.py  models.py  package-lock.json  pyproject.toml  replit_auth.py  requirements.txt  routes.py
middleware/: security_middleware.py
services/: ai_service.py  cache_service.py  encryption_service.py  file_service.py  search_service.py  security_service.py  validation_service.py
static/css/: cyberpunk.css
static/js/: chat.js  file-upload.js  theme.js
supabase/migrations/: 20250618043407_young_fire.sql  20250618043555_sparkling_peak.sql
templates/: 403.html  activity_logs.html  base.html  change_password.html  chat.html  index.html  login.html  settings.html  users.html
templates/auth/: login.html  signup.html
