[project]
name = "cyberchat-ai"
version = "0.1.0"
description = "Secure CyberChat AI with custom authentication"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "requests>=2.32.4",
    "cryptography>=45.0.4",
    "pypdf2>=3.0.1",
    "pillow>=11.2.1",
    "sqlalchemy>=2.0.41",
    "bcrypt>=4.0.1",
]